--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Demo Page 1</h1>
 		</header>
 		<main>
-			<section>
+			<section aria-live="assertive" aria-atomic="true">
 				<form method="GET" action="">
 					<div class="form-group">
 						<label for="pageTxt">Page:
@@ -341,6 +341,12 @@
 	    </div>
 				</form>
 		</main>
+		<nav>
+		<h2>Site Menu</h2>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+		</ul>
+		</nav>
 		<footer>
 		</footer>
 		<script src="scripts/sitedemo.js"></script>
