WIP: Added more text I think.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 			<p>"Wait.  What?" you ask.  "How can something conform to WCAG, but not be accessible?"</p>
 			<p>WCAG stands for "Web Content Accessibility Guidelines", and they're just that:  guidelines.</p>
 			<p>WCAG lays out Success Criteria to be met which will increase the likelyhood of a website being accessible.  Accessibility could be reworded:  Usable by all.</p>
-			<p>Accessibility is more subjective.  WCAG Conformance is more objective, but not entirely objective.  There is plenty of grey in WCAG conformance.
+			<p>Accessibility is more subjective.  WCAG Conformance is more objective, but not entirely objective.  There is plenty of grey in WCAG conformance.  If you want to know if your website is accessible, you need to do user experience testing with your target audience, including any target disability groups that may use your site along with whatever assistive technology they use.  For WCAG compliance, you need someone who knows WCAG and how to assess a website for WCAG compliance.</p>
+
 		</section>
 		</main>
 		<nav>
